--- a/paragraph.html
+++ b/paragraph.html
@@ -14,11 +14,11 @@
 </head>
 <body>
     <input type="checkbox" name="radio1" id="radio1">
-    <p class="paragraph1" id="paragraph1">The immediate aim of the Communists is the same as that of all the other proletariat parties: formation of the proletariat into a class, the overthrow of the bourgeois supremacy, conquest of political power by the proletariat.</p>
+    <p class="paragraph1" id="paragraph1">The immediate aim of the Communists is the same as that of all the other proletariat PARTIES: formation of the proletariat into a class, the overthrow of the bourgeois supremacy, conquest of political power by the proletariat.</p>
     <input type="checkbox" name="radio2" id="radio2">
-    <p class="paragraph2">What is genuine is proved in the fire, what is false we shall not miss in our ranks. The opponents must grant us that youth has never before flocked to our colours in such numbers, ... in the end, one will be found among us who will prove that the sword of enthusiasm is just as good as the sword of geniu</p>
+    <p class="paragraph2">What is genuine is proved in the FIRE, what is false we shall not miss in our ranks. The opponents must grant us that youth has never before flocked to our colours in such numbers, ... in the end, one will be found among us who will prove that the sword of enthusiasm is just as good as the sword of geniu</p>
     <input type="checkbox" name="radio3" id="radio3">
-    <p class="paragraph3">Political Economy regards the proletarian ... like a horse, he must receive enough to enable him to work. It does not consider him, during the time when he is not working, as a human being. It leaves this to criminal law, doctors, religion, statistical tables, politics, and the beadle.</p>
+    <p class="paragraph3">Political Economy regards the proletarian ... like a HORSE, he must receive enough to enable him to work. It does not consider him, during the time when he is not working, as a human being. It leaves this to criminal law, doctors, religion, statistical tables, politics, and the beadle.</p>
 </body>
 
 <script>
